--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -1577,7 +1577,7 @@ of Lorem Ipsum.
                                 <div class="card">
                                   <div class="card-body p-0 m-0">
                                     <table
-                                      id="hif-tabel"
+                                      id="hif-tabel-1"
                                       class="table sorting table-hover table-striped mb-0"
                                       width="100%"
                                     >
@@ -1763,7 +1763,7 @@ of Lorem Ipsum.
                                 <div class="card">
                                   <div class="card-body p-0 m-0">
                                     <table
-                                      id="hif-tabel"
+                                      id="hif-tabel-2"
                                       class="table sorting table-hover table-striped mb-0"
                                       width="100%"
                                     >
@@ -2396,7 +2396,193 @@ of Lorem Ipsum.
         </div>
       </div>
     </div>
-
+    <!-- Modal Tilføj Eksisterende HIF -->
+    <div
+      class="modal fade"
+      id="tilfoejHIF"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="tilfoejHIFmodallabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title font-weight-bold" id="tilfoejHIFmodallabel">
+              Tilføj Eksisterende HIF
+            </h5>
+            <button
+              type="button"
+              class="btn close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 12 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                  />
+                </svg>
+              </span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb"></ol>
+            </nav>
+            <div
+              id="carousel"
+              class="carousel slide"
+              data-ride="carousel"
+              data-interval="false"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="card bg-light">
+                    <div class="card-body">
+                      <div class="d-flex align-items-center mb-3">
+                        <div class="form-check form-check-inline mr-4">
+                          <input
+                            class="form-check-input"
+                            type="radio"
+                            name="exampleRadios"
+                            id="exampleRadios1"
+                            value="option1"
+                            checked
+                          />
+                          <label
+                            class="form-check-label ml-2"
+                            for="exampleRadios1"
+                          >
+                            Arkivskaber
+                          </label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input
+                            class="form-check-input"
+                            type="radio"
+                            name="exampleRadios"
+                            id="exampleRadios2"
+                            value="option2"
+                          />
+                          <label
+                            class="form-check-label ml-2"
+                            for="exampleRadios2"
+                          >
+                            Arbejdsopgave
+                          </label>
+                        </div>
+                      </div>
+                      <div
+                        class="d-flex align-items-center justify-content-between"
+                      >
+                        <input
+                          type="text"
+                          class="form-control form-control-lg"
+                          placeholder="Søg..."
+                          value="Frederiksberg Politi"
+                        />
+                        <button class="btn btn-primary btn-lg ml-2">Søg</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card mt-3">
+                    <div class="card-body p-0">
+                      <h4 class="mb-3 ml-3 mt-3">
+                        <span class="font-weight-bold">33</span> resultater
+                      </h4>
+                    </div>
+                  </div>
+                  <div class="card mt-3 mb-3">
+                    <div class="card-body p-0">
+                      <div class="table-responsive">
+                        <table
+                          id=""
+                          width="100%"
+                          class="table sorting table-hover table-striped mb-0"
+                        >
+                          <thead>
+                            <tr>
+                              <th scope="col">HE betegnelse</th>
+                              <th scope="col">Sorteringsfelt</th>
+                              <th scope="col">HE-Fra</th>
+                              <th scope="col">HE-Til</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr data-slide-to="1" data-target="#carousel">
+                              <td><a href="#">Kredsaflytningssystem</a></td>
+                              <td>sh29942</td>
+                              <td>1988</td>
+                              <td>2020</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <h5 class="font-weight-semibold mb-3 mt-0 ml-2">
+                    Vælg Identifikatorformat
+                  </h5>
+                  <div class="card mt-3 mb-3">
+                    <div class="card-body p-0">
+                      <div class="table-responsive">
+                        <table
+                          id=""
+                          width="100%"
+                          class="table sorting table-hover table-striped mb-0"
+                        >
+                          <thead>
+                            <tr>
+                              <th scope="col">Betegnelse</th>
+                              <th scope="col">DIF</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr
+                              data-slide-to="0"
+                              data-target="#carousel"
+                              data-dismiss="modal"
+                            >
+                              <td><a href="#">Journalnr.</a></td>
+                              <td>År, Saggruppe, Løbenr.</td>
+                            </tr>
+                            <tr
+                              data-slide-to="0"
+                              data-target="#carousel"
+                              data-dismiss="modal"
+                            >
+                              <td><a href="#">Journalside</a></td>
+                              <td>År, Sidenr</td>
+                            </tr>
+                            <tr
+                              data-slide-to="0"
+                              data-target="#carousel"
+                              data-dismiss="modal"
+                            >
+                              <td><a href="#">Dato</a></td>
+                              <td>År, Måned, Dag</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
