Added plus minus functionallity to better communicate open close

--- a/heuristiskenhed-papir.html
+++ b/heuristiskenhed-papir.html
@@ -1107,7 +1107,7 @@ of Lorem Ipsum.
                         class="d-flex align-items-center justify-content-between"
                       >
                         <h4
-                          class="font-weight-bold mt-3 ml-3 mb-4"
+                          class="font-weight-bold mt-3 ml-3 mb-2"
                           id="heeksemplarer"
                         >
                           <div class="d-flex align-items-center">
@@ -1147,6 +1147,9 @@ of Lorem Ipsum.
                           <span>Tilføj nyt Eksemplar</span>
                         </button>
                       </div>
+                      <p class="ml-3 text-secondary mb-4">
+                        Klik på et eksemplar for at se yderligere oplysninger.
+                      </p>
                       <div class="row mt-3 mb-5 ml-1 mr-1">
                         <div class="col-sm-12">
                           <div class="card">
@@ -1158,6 +1161,9 @@ of Lorem Ipsum.
                               >
                                 <thead>
                                   <tr>
+                                    <th scope="col" width="20" class="hidden">
+                                      &nbsp;
+                                    </th>
                                     <th scope="col">Formålstype</th>
                                     <th scope="col">Medietype</th>
                                     <th scope="col">Navn</th>
@@ -1175,6 +1181,34 @@ of Lorem Ipsum.
                                     aria-controls="collapseOne"
                                     href="#collapseOne"
                                   >
+                                    <td>
+                                      <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="12"
+                                        height="16"
+                                        viewBox="0 0 12 16"
+                                        class="open-icon"
+                                      >
+                                        <path
+                                          fill="#0C9320"
+                                          fill-rule="evenodd"
+                                          d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                                        />
+                                      </svg>
+                                                                            <svg
+                                        width="12"
+                                        height="2"
+                                        viewBox="0 0 12 2"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        class="close-icon"
+                                      >
+                                        <path
+                                          d="M12 2H0V0h12z"
+                                          fill="#EA0000"
+                                          fill-rule="nonzero"
+                                        />
+                                      </svg>
+                                    </td>
                                     <td>VIII.b-1</td>
                                     <td>8 cm. stort format</td>
                                     <td>
@@ -1208,6 +1242,34 @@ of Lorem Ipsum.
                                     aria-controls="collapseTwo"
                                     href="#collapseTwo"
                                   >
+                                    <td>
+                                      <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        width="12"
+                                        height="16"
+                                        viewBox="0 0 12 16"
+                                        class="open-icon"
+                                      >
+                                        <path
+                                          fill="#0C9320"
+                                          fill-rule="evenodd"
+                                          d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                                        />
+                                      </svg>
+                                      <svg
+                                        width="12"
+                                        height="2"
+                                        viewBox="0 0 12 2"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        class="close-icon"
+                                      >
+                                        <path
+                                          d="M12 2H0V0h12z"
+                                          fill="#EA0000"
+                                          fill-rule="nonzero"
+                                        />
+                                      </svg>
+                                    </td>
                                     <td>VIII.b-2</td>
                                     <td>8 cm. stort format</td>
                                     <td>
