--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -1411,9 +1411,9 @@ of Lorem Ipsum.
       <div class="col-sm-10 col-centered">
         <div class="row mb-3 mt-3">
           <div class="card w-100">
-            <div class="card-body p-lg-4">
+            <div class="card-body p-lg-6">
               <div
-                class="d-flex align-items-center justify-content-between mb-4"
+                class="d-flex align-items-center justify-content-between mb-3"
               >
                 <h4
                   class="font-weight-bold mt-3 ml-3 mb-0"
@@ -1454,6 +1454,9 @@ of Lorem Ipsum.
                   <span>Tilføj ny arkiveringsversion</span>
                 </button>
               </div>
+              <p class="ml-3 text-secondary mb-1">
+                Klik på en arkiveringsversion for at se yderligere oplysninger.
+              </p>
               <div class="row mt-3 mb-5 ml-1 mr-1">
                 <div class="col-sm-12">
                   <div class="card">
@@ -1465,6 +1468,7 @@ of Lorem Ipsum.
                       >
                         <thead>
                           <tr>
+                            <th scope="col" class="hidden" width="20"></th>
                             <th scope="col">AV-nr</th>
                             <th scope="col">Fra</th>
                             <th scope="col">Til</th>
@@ -1482,7 +1486,35 @@ of Lorem Ipsum.
                             aria-controls="collapseOne"
                             href="#collapseOne"
                           >
-                            <td>802367816</td>
+                            <td>
+                              <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="12"
+                                height="16"
+                                viewBox="0 0 12 16"
+                                class="open-icon"
+                              >
+                                <path
+                                  fill="#0C9320"
+                                  fill-rule="evenodd"
+                                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                                />
+                              </svg>
+                              <svg
+                                width="12"
+                                height="2"
+                                viewBox="0 0 12 2"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="close-icon"
+                              >
+                                <path
+                                  d="M12 2H0V0h12z"
+                                  fill="#EA0000"
+                                  fill-rule="nonzero"
+                                />
+                              </svg>
+                            </td>
+                            <td><a href="#802367816">802367816</a></td>
                             <td>1910</td>
                             <td>
                               1944
@@ -1515,7 +1547,35 @@ of Lorem Ipsum.
                             aria-controls="collapseTwo"
                             href="#collapseTwo"
                           >
-                            <td>802367817</td>
+                            <td>
+                              <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                width="12"
+                                height="16"
+                                viewBox="0 0 12 16"
+                                class="open-icon"
+                              >
+                                <path
+                                  fill="#0C9320"
+                                  fill-rule="evenodd"
+                                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                                />
+                              </svg>
+                              <svg
+                                width="12"
+                                height="2"
+                                viewBox="0 0 12 2"
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="close-icon"
+                              >
+                                <path
+                                  d="M12 2H0V0h12z"
+                                  fill="#EA0000"
+                                  fill-rule="nonzero"
+                                />
+                              </svg>
+                            </td>
+                            <td><a href="#802367817">802367817</a></td>
                             <td>1910</td>
                             <td>
                               1944
