--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -1488,30 +1488,39 @@ of Lorem Ipsum.
                           >
                             <td>
                               <svg
+                                width="24"
+                                height="24"
                                 xmlns="http://www.w3.org/2000/svg"
-                                width="12"
-                                height="16"
-                                viewBox="0 0 12 16"
                                 class="open-icon"
                               >
-                                <path
-                                  fill="#0C9320"
-                                  fill-rule="evenodd"
-                                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
-                                />
+                                <g fill="none" fill-rule="evenodd">
+                                  <circle
+                                    fill="#0C9320"
+                                    cx="12"
+                                    cy="12"
+                                    r="12"
+                                  />
+                                  <path
+                                    fill="#FFF"
+                                    d="M18 13h-5v5h-2v-5H6v-2h5V6h2v5h5z"
+                                  />
+                                </g>
                               </svg>
                               <svg
-                                width="12"
-                                height="2"
-                                viewBox="0 0 12 2"
+                                width="24"
+                                height="24"
                                 xmlns="http://www.w3.org/2000/svg"
                                 class="close-icon"
                               >
-                                <path
-                                  d="M12 2H0V0h12z"
-                                  fill="#EA0000"
-                                  fill-rule="nonzero"
-                                />
+                                <g fill="none" fill-rule="evenodd">
+                                  <circle
+                                    fill="#EA0000"
+                                    cx="12"
+                                    cy="12"
+                                    r="12"
+                                  />
+                                  <path fill="#FFF" d="M18 13H6v-2h12z" />
+                                </g>
                               </svg>
                             </td>
                             <td><a href="#802367816">802367816</a></td>
@@ -1549,30 +1558,39 @@ of Lorem Ipsum.
                           >
                             <td>
                               <svg
+                                width="24"
+                                height="24"
                                 xmlns="http://www.w3.org/2000/svg"
-                                width="12"
-                                height="16"
-                                viewBox="0 0 12 16"
                                 class="open-icon"
                               >
-                                <path
-                                  fill="#0C9320"
-                                  fill-rule="evenodd"
-                                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
-                                />
+                                <g fill="none" fill-rule="evenodd">
+                                  <circle
+                                    fill="#0C9320"
+                                    cx="12"
+                                    cy="12"
+                                    r="12"
+                                  />
+                                  <path
+                                    fill="#FFF"
+                                    d="M18 13h-5v5h-2v-5H6v-2h5V6h2v5h5z"
+                                  />
+                                </g>
                               </svg>
                               <svg
-                                width="12"
-                                height="2"
-                                viewBox="0 0 12 2"
+                                width="24"
+                                height="24"
                                 xmlns="http://www.w3.org/2000/svg"
                                 class="close-icon"
                               >
-                                <path
-                                  d="M12 2H0V0h12z"
-                                  fill="#EA0000"
-                                  fill-rule="nonzero"
-                                />
+                                <g fill="none" fill-rule="evenodd">
+                                  <circle
+                                    fill="#EA0000"
+                                    cx="12"
+                                    cy="12"
+                                    r="12"
+                                  />
+                                  <path fill="#FFF" d="M18 13H6v-2h12z" />
+                                </g>
                               </svg>
                             </td>
                             <td><a href="#802367817">802367817</a></td>
